@@ -72,6 +72,8 @@ Extensions Modules
 Library
 -------
 
+- Issue #2478: fix failure of decimal.Decimal(0).sqrt()
+
 - Issue #2432: give DictReader the dialect and line_num attributes
   advertised in the docs.
 
